<resources>
    <string name="google_api_key">AIzaSyCU9bUxA_ekCnrRwA3sU31gtc58hfbdxMM</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example action</string>
    <string name="sign_in_label">Sign In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="title_activity_eula">EulaActivity</string>
    <string name="eula">*End User Agreement</string>
    <string name="i_agree">I agree to both the EULA and privacy policy</string>
    <string name="must_accept">You must read and agree with our terms and policies before continuing.</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="zero">0</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="beacons_activity_registration">BeaconsActivity</string>
    <string name="webview_activity_registration">WebViewActivity</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="address2">Address 2 (optional)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email Address</string>
    <string name="cellphone">Cell Phone</string>
    <string name="dob">Birthday</string>
    <string name="classification">Role</string>
    <string name="com_preference">Communication Preference</string>
    <string name="device_platform">Device Platform</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="shirt_size">T-Shirt Size</string>
    <string name="service_provider">Mobile Service Provider</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="user_id">User Id:</string>
    <string name="email_colon">Email:</string>
    <string name="password_colon">Password:</string>
    <string name="cellphone_colon">Cell Phone:</string>
    <string name="classification_colon">Classification:</string>
    <string name="device_colon">Device:</string>
    <string name="dob_colon">Bitrhday:</string>
    <string name="gender_colon">Gender:</string>
    <string name="com_pref_colon">Prefferred Contact:</string>
    <string name="shirt_size_colon">T-Shirt Size:</string>
    <string name="service_provider_colon">Mobile Service Provider:</string>
    <string name="edit_button">EDIT</string>
    <string name="menu_option">Option</string>
    <string name="back">BACK</string>
    <string name="spoils">The spoils</string>
    <string name="points">Points</string>
    <string name="date">Date and time</string>
    <string name="rewards">Rewards</string>
    <string name="no_rewards">No rewards</string>
    <string name="event_info">Event Info</string>
    <string name="location_based_messages">Location Based Messages</string>
    <string name="this_app">This app will send you messages and promotions from time to time based on your geographic location. This function uses the locations service on your phone</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="when_messages">When messages are received you will receive an alert on your phone. If this is unchecked you will still receive messages in the App notification feed</string>
    <string name="eula_prefix">END USER LICENSING AGREEMENT ("EULA")</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="status">Status</string>
    <string name="name_single">Name</string>
    <string name="rank">Rank</string>
    <string name="select_sport">Select sport</string>
    <string name="set_date">Select date</string>
    <string name="done">Done</string>
    <string name="share">SHARE</string>
    <string name="points_case">POINTS</string>
    <string name="begin_scanning">Begin Scanning</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="events_activity">EventsActivity</string>
    <string name="my_history_activity">MyHistoryActivity</string>
    <string name="my_rewards_activity">MyRewardsActivity</string>
    <string name="events">Events</string>
    <string name="tier">TIER</string>
    <string name="rank_case">RANK:</string>
    <string name="points_dots">POINTS:</string>
    <string name="fb_app_id">1622849144682222</string>
    <string name="profile">Profile</string>
    <string name="bluetooth_message">This app has a proximity feature which interacts with bluetooth beacons. This feature is supported by your device and you can activate it now, or later using the switch on the settings page. The feature is offered as option and performance may vary dependent on your device</string>
    <string name="explore">0</string>
    <string name="proximity_based_messages">Proximity Based Messages</string>
    <string name="from_time">From time to time you will receive messages and promotions based on your proximity to a trasmitting beacon. This function uses Bluetooth LE.</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_beacons">What\'s around me</string>
    <string name="logout">Logout</string>
    <string name="beacon_title">Beacon title</string>
    <string name="user_name">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_message">Please check your email for a link to reset your password</string>
    <string name="login">Login</string>
    <string name="fill_info">Please fill the required information</string>
    <string name="first_name_required">First Name *</string>
    <string name="last_name_required">Last Name *</string>
    <string name="email_address_required">Email Address *</string>
    <string name="password_required">Password *</string>
    <string name="accept_terms_profile">I accept that I am over 18 years old</string>
    <string name="required_field_label">* Indicates required field</string>
    <string name="create_account">Create Account</string>
    <string name="or">or</string>
    <string name="read_eula">Read EULA</string>
    <string name="read_privacy_policy">Read Privacy Policy</string>
    <string name="have_read_and_agreed">I have read and AGREED to the EULA  and Privacy Policy</string>
    <string name="accept_and_continue">Accept and Continue</string>
    <string name="connection_error">Connectivity</string>
    <string name="no_results">NO RESULTS</string>
    <string name="whoop">Whoops</string>
    <string name="something_went_wrong">Something went wrong with our service, try again later...</string>
    <string name="sorry_for_inconvenience">We\'re sorry for the inconvenience.</string>
    <string name="toolbar_button_title"> </string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">You don\'t have notifications at this moment</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="locations_services">Allow app to get notifications based on your location</string>
    <string name="beacon_based_messages">Beacon Based Notifications</string>
    <string name="beacon_services">Allow app to get notifications based on beacon interactions</string>
    <string name="notification_categories">Notification Categories</string>
    <string name="please_login"><u>Please login to be able to customize notification categories based on your profile</u></string>
    <string name="some_text">Some text</string>
    <string name="menu_item_name">Menu Item</string>
    <string name="email_contact">sanmobileappbeta@gmail.com</string>
    <string name="email_contact_subject">ECOS Contact</string>
    <string name="email_contact_text">Please put your message here...</string>
    <string name="tcs_app_page_not_supported">TCS App Page not supported</string>
    <string name="connection_error_message">There is a connectivity issue please try to relaunch the app</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="internet_connection_message">It seems you don\'t have internet connectivity please check your settings and relaunch the app</string>
    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">An internet connection is required to reset your password</string>
    <string name="login_with_email">Log in with email</string>
    <string name="login_warning">Login</string>
    <string name="email_address_error">Email address must be valid</string>
    <string name="empty_password">You must enter a password</string>
    <string name="incorrect_credentials">Email and/or password are incorrect</string>
    <string name="wrong_email">The email provided is not registered for any user please verify your email</string>
    <string name="signup_with_email">Sign up with email</string>
    <string name="first_name_warning">Please provide your first name</string>
    <string name="last_name_warning">Please provide your last name</string>
    <string name="email_address_warning">Please provide a valid email address</string>
    <string name="password_warning">Password must include at least six characters and contain a combination of letters and numbers</string>
    <string name="accept_terms_profile_warning">Please confirm that you are over 18</string>
    <string name="sig_up_warning">Sign Up</string>
    <string name="get_directions">Get directions</string>
    <string name="cancel">Cancel</string>
    <string name="leaderboard">Top 25</string>
    <string name="push_notifications_enabled">Beacon notifications enabled</string>
    <string name="push_notifications_disabled">Beacon notifications disabled</string>
    <string name="location_messages_enabled">Location based messages enabled</string>
    <string name="location_messages_disabled">Location based messages disabled</string>
    <string name="align_view">Align <b>view</b> with <b>target</b></string>
    <string name="tap_continue">Tap to play</string>
    <string name="profile_update_success">Your profile update was successful</string>
    <string name="problem_updating_profile">There was a problem updating your profile</string>
    <string name="re_try">RETRY</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_history">My History</string>
    <string name="sign_in_email">Log in with Email</string>
    <string name="featured_demos">Featured Events</string>
    <string name="go">Go</string>
    <string name="enter_code">Enter event code</string>
    <string name="remember_option">Remember this option</string>
    <string name="current_demo">You can change the selected event by accessing the Choose Event option from the Main Menu</string>
    <string name="yes_answer">Yes</string>
    <string name="no_answer">No</string>
    <string name="next">Next</string>
    <string name="rsvp">RSVP</string>
    <string name="no_featured_apps">There are no featured events at this moment</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="continue_tap">Continue</string>
    <string name="thanks_for_signing">All set, thanks for signing up</string>
    <string name="bmi">Body Mass Index *</string>
    <string name="gender_label">Gender *</string>
    <string name="membership_label">Membership Type *</string>
</resources>