<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.0"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="30dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eula"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/read_eula_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:background="@drawable/button_background"
                android:text="@string/read_eula"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/read_privacy_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/read_privacy_policy"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/agreed_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/have_read_and_agreed"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background_accent"
                android:enabled="false"
                android:text="@string/accept_and_continue"
                android:textColor="@color/white" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>