<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/message_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/image_mood"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="111dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_mood_bad"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_mood"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/whoop"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/something_went_wrong"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:maxLines="2"
        android:lines="2"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/sorry_for_inconvenience"
        android:textColor="@color/white"
        android:textSize="16dp"/>

 </RelativeLayout>