<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/coordinator_layout"
                                                 xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/header_toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/fill_info"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/first_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginBottom="13dp"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/sdia_edit_text_gray">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/sdia_edit_text_gray"
                        android:hint="@string/first_name_required"
                        android:inputType="textCapWords"

                        android:maxLength="50"
                        android:textColor="@color/sdia_font_gray"
                        android:textColorHint="@color/sdia_edit_text_gray"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/last_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginBottom="13dp"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/sdia_edit_text_gray">

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/sdia_edit_text_gray"
                        android:hint="@string/last_name_required"
                        android:inputType="textCapWords"
                        android:maxLength="50"
                        android:textColor="@color/sdia_font_gray"
                        android:textColorHint="@color/sdia_edit_text_gray"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_address_hint"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginBottom="13dp"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/sdia_edit_text_gray">

                    <EditText
                        android:id="@+id/email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/sdia_edit_text_gray"
                        android:hint="@string/email_address_required"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/sdia_font_gray"
                        android:textColorHint="@color/sdia_edit_text_gray"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/sdia_edit_text_gray">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/sdia_edit_text_gray"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password_required"
                        android:inputType="textPassword"
                        android:textColor="@color/sdia_font_gray"
                        android:textColorHint="@color/sdia_edit_text_gray"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:visibility="gone"
                    android:id="@+id/bmi_hint"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/sdia_edit_text_gray">

                    <EditText
                        android:id="@+id/bmi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/sdia_edit_text_gray"
                        android:fontFamily="sans-serif"
                        android:hint="@string/bmi"
                        android:textColor="@color/sdia_font_gray"
                        android:textColorHint="@color/sdia_edit_text_gray"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gender_label"/>

                <Spinner
                    android:visibility="gone"
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/membership_label"/>

                <Spinner
                    android:visibility="gone"
                    android:id="@+id/membership_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="51dp"
                    android:text="@string/required_field_label"/>

                <Button
                    android:id="@+id/create_account"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginBottom="14dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_background_accent"
                    android:elevation="2dp"
                    android:text="@string/create_account"
                    android:textColor="@color/black"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/welcome_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/cover_menu"/>

        <LinearLayout
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_image"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:alpha="0.86"
                android:gravity="center"
                android:text="@string/thanks_for_signing"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.86"
                android:gravity="center"
                android:text="@null"
                android:textColor="@color/black"
                android:textSize="30sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="180dp"
            android:layout_height="@dimen/button_height"
            android:layout_below="@+id/message_container"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background_accent"
            android:text="@string/continue_tap"
            android:textColor="@color/white"/>


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>