<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/location_messages_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/location_based_messages"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/location_messages_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/locations_services"
                android:textColor="@color/sdia_edit_text_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/location_messages_container"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/beacon_messages_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_below="@+id/separator"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/beacon_based_messages"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/beacon_messages_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/beacon_services"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/beacon_messages_container"
            android:background="@color/light_gray" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>